# SFMLPractice

./: .gitignore  Bullet.cpp  Bullet.h  CMakeLists.txt  Character.cpp  Character.h  CharacterContainer.cpp  CharacterContainer.h  DevNotes.txt  Game.cpp  Game.h  Main.cpp  Misc.cpp  Misc.h  Phases.cpp  Phases.h  Practice3.cpp  SFMLPractice.sln  SFMLPractice.vcxproj  SFMLPractice.vcxproj.filters  Ship.cpp  Ship.h  Testing.cpp  run.bat
Debug/: SFMLPractice.exe.recipe  SFMLPractice.vcxproj.FileListAbsolute.txt  vc143.idb
Debug/SFMLPractice.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SFMLPractice.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Release/: SFMLPractice.exe.recipe  SFMLPractice.iobj  SFMLPractice.vcxproj.FileListAbsolute.txt
Release/SFMLPractice.tlog/: CL.command.1.tlog  Cl.items.tlog  SFMLPractice.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.2u.tlog
SFMLPractice/Debug/: SFMLPractice.exe.recipe  SFMLPractice.ilk  vc143.idb
SFMLPractice/Debug/SFMLPractice.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SFMLPractice.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
SFMLPractice/Release/: SFMLPractice.exe.recipe  SFMLPractice.iobj
SFMLPractice/Release/SFMLPractice.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SFMLPractice.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
SFMLPractice/x64/Debug/SFMLPractice.tlog/: SFMLPractice.lastbuildstate
SaveState/: SaveState.txt
Sprites/Ship/Main Ship/Main Ship - Design/: Main Ship - Fighter Design1.tga  Main Ship - Fighter Design3.tga
src/: Bullet.cpp  Bullet.h  Character.cpp  Character.h  CharacterContainer.cpp  CharacterContainer.h  Game.cpp  Game.h  Main.cpp  Misc.cpp  Misc.h  Phases.cpp  Phases.h  Ship.cpp  Ship.h
x64/Release/SFMLPractice.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SFMLPractice.lastbuildstate
